# CS_0764_DBMS

./: CMakeLists.txt  Filter.cpp  Filter.h  InputBuffer.cpp  InputBuffer.h  InputStream.h  Iterator.cpp  Iterator.h  Makefile  PriorityQueue.cpp  PriorityQueue.h  README  README.md  Record.cpp  Record.h  Scan.cpp  Scan.h  Sort.cpp  Sort.h  Tasks.txt  Test.cpp  data.txt  defs.cpp  inputfile.txt  trace125MB2KB.txt  trace12GB2KB.txt  trace50MB200B.txt  trace50MB20B.txt
Traces/: trace125MB20B.txt  trace12GB200B.txt
TracesAndOutputs/: trace125MB200B.txt  trace125MB2KB.txtmake  trace50MB2KB.txt
